cabal-version:       2.4

name:                magic-square
version:             0.1.0.0
synopsis:            Create a magic square of order three in the terminal
license:             MIT
license-file:        LICENSE
author:              erickcan
maintainer:          79339358+erickcan@users.noreply.github.com
copyright:           2021 erickcan
category:            Math
extra-source-files:  README.md

library
  exposed-modules:     Magic, MagicArgs
  build-depends:       base ^>=4.14.1.0, optparse-applicative >=0.16
  hs-source-dirs:      src
  default-language:    Haskell2010

executable magic-square
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base ^>=4.14.1.0, magic-square
  default-language:    Haskell2010
